Fixed spacing on all files

--- a/sorting/public/index.html
+++ b/sorting/public/index.html
@@ -69,13 +69,13 @@
 
     function getAllTags() {
         // rewrite this -- ! important
-        return ["all"]
+        return ["all"];
     }
 
 
     function getAllCats() {
         // rewrite this -- ! important
-        return ["all"]
+        return ["all"];
     }
 
     function filterChanged() {
