--- a/sorting/public/index.html
+++ b/sorting/public/index.html
@@ -3,124 +3,11 @@
 
 <head>
     <title>Sorting JSON</title>
-    <script src='jquery-1.11.3.js'>
-    </script>
-    <script>
-    function getXMLHTTPRequest() {
-        var request;
-
-        // Lets try using ActiveX to instantiate the XMLHttpRequest object
-        try {
-            request = new ActiveXObject("Microsoft.XMLHTTP");
-        } catch (ex1) {
-            try {
-                request = new ActiveXObject("Msxml2.XMLHTTP");
-            } catch (ex2) {
-                request = null;
-            }
-        }
-
-        // If the previous didn't work, lets check if the browser natively support XMLHttpRequest
-        if (!request && typeof XMLHttpRequest != "undefined") {
-            //The browser does, so lets instantiate the object
-            request = new XMLHttpRequest();
-        }
-
-        return request;
-    }
-
-    function loadURL(filename, callback) {
-        var aXMLHttpRequest = getXMLHTTPRequest();
-        var allData;
-        if (aXMLHttpRequest) {
-            aXMLHttpRequest.open("GET", filename, true);
-
-            aXMLHttpRequest.onreadystatechange = function(aEvt) {
-                if (aXMLHttpRequest.readyState == 4) {
-                    allData = aXMLHttpRequest.responseText;
-                    callback(allData)
-                }
-            };
-            aXMLHttpRequest.send(null);
-        } else {
-            alert("A problem occurred instantiating the XMLHttpRequest object.");
-        }
-    }
-
-    function startUp() {
-        populateFilters();
-        sortChanged();
-    }
-
-    function populateFilters() {
-        var outS = "";
-        outS += "<option disabled> Tags </option>";
-        var temp = getAllTags();
-        for (var i = 0; i < temp.length; i++) {
-            outS += "<option value=tag_'" + temp[i] + "'>" + temp[i] + "</option>";
-        }
-        outS += "<option disabled> Categories </option>";
-        var temp = getAllCats();
-        for (var i = 0; i < temp.length; i++) {
-            outS += "<option value=cat_'" + temp[i] + "'>" + temp[i] + "</option>";
-        }
-        document.getElementById("filterSel").innerHTML = outS;
-    }
-
-    function getAllTags() {
-        // rewrite this -- ! important
-        return ["all"];
-    }
-
-
-    function getAllCats() {
-        // rewrite this -- ! important
-        return ["all"];
-    }
-
-    function filterChanged() {
-        var val = document.getElementById("filterSel").value.split("_");
-        if (val[1] == "all") {
-            $(".listItem").fadeIn();
-        }
-
-
-        //complete this function!
-
-    }
-
-    function sortChanged() {
-        var x = document.getElementById("sortSel").value.split("_");
-        var alg = x[0];
-        var key = x[1];
-        var url = "./getSortedJSON?alg=" + alg +
-            "&key=" + key;
-        loadURL(url, function(data) {
-            objs = JSON.parse(data);
-            var outS = "";
-            for (var i = 0; i < objs.length; i++) {
-                outS +=
-                    "<li class='listItem'>" +
-                    "<div>" + objs[i].id + "</div>" +
-                    "<h1>" + objs[i].title + "</h1>" +
-                    "<div>" + objs[i].excerpt + "</div>" +
-                    "<div>" + new Date(objs[i].date).toString() + "</div>" +
-                    "<a target='_blank' href='" + objs[i].permalink + "'>" + objs[i].permalink + "</a>" +
-                    "</li>";
-            }
-            document.getElementById("theList").innerHTML = outS;
-        });
-    }
-    </script>
+    <script src='jquery-1.11.3.js'></script>
+    <script src="scripts/script.js" type="text/javascript" charset="utf-8" async defer></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <style>
-    li {
-        padding: 20px;
-        margin-top: 20px;
-        border: 1px solid;
-    }
-    </style>
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 
 <body onload='startUp()'>
